fix settings overflow scroll

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,11 +58,13 @@ html, body, #app, #main, #curtain, #control-panel {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 .center-box.scrollable {
     height: auto;
+}
+.center-box.center {
+    justify-content: center;    
 }
 #success, #invalid-request {
     text-align: center;
@@ -86,17 +88,19 @@ html, body, #app, #main, #curtain, #control-panel {
     padding: 10px 20px;
     background-size: 25px;
 }
+form {
+    display: flex;
+}
 form, .mod-form {
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     background-color: #fff;
-    padding: 20px;
+    padding: 0px 20px;
     width: 100%;
     max-width: 640px;
-    display: flex;
     flex-direction: column;
 }
 .mod-form {
-    max-height: 500px;
+    padding-bottom: 10px;
 }
 form select {
     padding: 5px 20px;
